NMClient async initialization isn't really async
I've something like 600 connections stored in my network manager, and I noticed that when I was starting GNOME Shell the animations were blocking.
After some debugging I identified that this was happening during the creation of the NM client, that although was done in an async fashion, the loop was actually blocking.
You can easily test this using the (evil) snippet 3v1n0/NetworkManager$666, that somewhat simulates a main-loop rendering every 16ms, while async-init the NM Client.
But this leads to some delays (also in setups when there are not so many connections actually).
See the snippet description to see an example output.